# typeutil

./: Makefile.am  Makefile.in  VERSION  compare.ml  compare.mli  configure  configure.in  hTMLView.ml  hTMLView.mli  view.ml  view.mli
doc/: Makefile.am
regression/: Makefile.am  Makefile.in  test.ml  test.sh
src/: Makefile.am  Makefile.in  compare.ml  compare.mli  hTMLView.ml  hTMLView.mli  view.ml  view.mli
